--- a/static/css/style.css
+++ b/static/css/style.css
@@ -87,8 +87,31 @@ height:375px;
 
 
 
+.containerRules{
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    margin:12px;
+    padding:12px;
+    
+}
 
+.containerRules button{
+   color:blue;
+   
+   border:1px solid black;
+   border-radius: 10px;
+    
+}
+.containerRules a hover{
+    color:black;
+    
+     
+ }
 
+.containerRules a{
+    text-decoration:none;
+}
 
 
 
@@ -102,5 +125,26 @@ border:1px solid black;
     }
 
 
-
+    .containerstyleRules{display:flex;
+        border:2px solid black;
+        flex-direction:column;
+        align-items:center;
+        justify-content:center;
+        margin:12px 137px;
+        padding:12px;
+        width:80%;
+        font-size:22px;
+        }
+        .containerstyleRules1{display:flex;
+        border:2px solid black;
+        flex-direction:column;
+        align-items:center;
+        justify-content:center;
+        background-color:black;
+        color:white;
+        margin:12px 137px;
+        padding:12px;
+        width:80%;
+        font-size:23px;
+        }
 
