--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,8 +12,8 @@
 
 .flex-blackjack-row-1,.flex-blackjack-row-2{
 /* background:url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS9bZkCVxKQosAIPOT-mjCuG5g3KRCQvpUA-w&usqp=CAU"); */
-background:url("https://www.publicdomainpictures.net/pictures/30000/velka/solid-green-background.jpg");
-/* background-image: url("solid-green-background.jpg");               */
+/* background:url("https://www.publicdomainpictures.net/pictures/30000/velka/solid-green-background.jpg"); */
+background-image: url("solid-green-background.jpg");              
 /* background: url("solid-green-background.jpg"); */
 color:#ffffff;
 
